--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,6 @@ tempdir = "0.3"
 
 
 [dev-dependencies]
-env_logger = "*"
+env_logger = "0.9"
 tracing = {version = "0.1", default-features = false}
 tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
