--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: coverage
+name: coverage instrument based
 
 on: [push, pull_request]
 
@@ -11,14 +11,15 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         profile: minimal
-        toolchain: nightly
-        override: true
     
     - name: Install lcov
       run: sudo apt-get install lcov
       
     - name: install grcov
       run: cargo install grcov
+      
+    - name: install llvm-tools-preview
+      run: rustup component add llvm-tools-preview
     
     - uses: actions/checkout@v2
       with:
@@ -27,13 +28,12 @@ jobs:
     - name: Run grcov
       env:
          PROJECT_NAME: "havocompare"
-         RUSTFLAGS: "-Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort"
+         RUSTFLAGS: "-Cinstrument-coverage -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort"
          CARGO_INCREMENTAL: 0
       run: |
          cargo build --verbose
          cargo test --verbose
-         zip -0 cov.zip $(find . -name "$PROJECT_NAME*.gc*" -print)
-         grcov cov.zip -s . -t lcov --llvm --ignore-not-existing --ignore "/*" -o lcov.info
+         grcov . -s . --binary-path ./target/debug/ -t lcov --llvm --branch --ignore-not-existing --ignore="/*" --ignore="target/*" --ignore="tests/*"  -o lcov.info
          
     - name: Push grcov results to Coveralls via GitHub Action
       uses: coverallsapp/github-action@v1.0.1
