--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,18 +8,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions-rs/toolchain@v1
+    - uses: actions/checkout@v2
+    - name: Install latest nightly
+      uses: actions-rs/toolchain@v1
       with:
-        profile: minimal
+        toolchain: stable
+        override: true
+        components: rustfmt, clippy, llvm-tools-preview
     
     - name: Install lcov
       run: sudo apt-get install lcov
       
     - name: install grcov
       run: cargo install grcov
-      
-    - name: install llvm-tools-preview
-      run: rustup component add llvm-tools-preview
     
     - uses: actions/checkout@v2
       with:
