--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,10 @@ description = "A flexible folder comparison tool / crate with html reporting."
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = {version= "4.0", features=["derive"]}
@@ -32,6 +30,8 @@ tera = "1.17"
 md5 = "0.7.0"
 tempdir = "0.3"
 
+[target.'cfg(windows)'.dependencies]
+ansi_term = "0.12"
 
 [dev-dependencies]
 env_logger = "0.9"
