--- a/config_scheme.json
+++ b/config_scheme.json
@@ -1,6 +1,6 @@
 {
   "$schema": "http://json-schema.org/draft-07/schema#",
-  "title": "Config",
+  "title": "ConfigurationFile",
   "type": "object",
   "required": [
     "rules"
@@ -70,6 +70,23 @@
           "format": "double"
         }
       }
+    },
+    "HashConfig": {
+      "type": "object",
+      "required": [
+        "hash"
+      ],
+      "properties": {
+        "hash": {
+          "$ref": "#/definitions/HashFunction"
+        }
+      }
+    },
+    "HashFunction": {
+      "type": "string",
+      "enum": [
+        "Sha256"
+      ]
     },
     "ImageCompareConfig": {
       "type": "object",
@@ -149,7 +166,7 @@
           "additionalProperties": false
         },
         {
-          "description": "stupid text compare",
+          "description": "plain text compare",
           "type": "object",
           "required": [
             "PlainText"
@@ -157,6 +174,19 @@
           "properties": {
             "PlainText": {
               "$ref": "#/definitions/HTMLCompareConfig"
+            }
+          },
+          "additionalProperties": false
+        },
+        {
+          "description": "Compare using file hashes",
+          "type": "object",
+          "required": [
+            "Hash"
+          ],
+          "properties": {
+            "Hash": {
+              "$ref": "#/definitions/HashConfig"
             }
           },
           "additionalProperties": false
