Add README, examples and changelog for hash compare and bom fixing

--- a/config_scheme.json
+++ b/config_scheme.json
@@ -74,10 +74,10 @@
     "HashConfig": {
       "type": "object",
       "required": [
-        "hash"
+        "function"
       ],
       "properties": {
-        "hash": {
+        "function": {
           "$ref": "#/definitions/HashFunction"
         }
       }
