Update readme.md for better commentary of the examples Bump version to 0.1.4-RC1 in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A flexible folder comparison tool / crate with html reporting."
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.1.3"
+version = "0.1.4-RC1"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
