Add compare of PDF raw text

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tempdir = "0.3"
 sha2 = "0.10.6"
 data-encoding = "2.3.2"
 permutation = "0.4.1"
+pdf-extract = "0.6.4"
 
 [target.'cfg(windows)'.dependencies]
 ansi_term = "0.12"
