Add clippy allow unwrap / expect in tests Fix clippy lints

--- a/config_scheme.json
+++ b/config_scheme.json
@@ -287,6 +287,19 @@
             }
           },
           "additionalProperties": false
+        },
+        {
+          "description": "PDF text compare",
+          "type": "object",
+          "required": [
+            "PDFText"
+          ],
+          "properties": {
+            "PDFText": {
+              "$ref": "#/definitions/HTMLCompareConfig"
+            }
+          },
+          "additionalProperties": false
         }
       ],
       "required": [
