--- a/tests/integ/jpg_compare.yml
+++ b/tests/integ/jpg_compare.yml
@@ -1,5 +1,6 @@
 rules:
   - name: "JPG comparison"
-    pattern_include: "**/*.jpg"
+    pattern_include:
+      - "**/*.jpg"
     Image:
       threshold: 0.9
