--- a/tests/integ/config.yml
+++ b/tests/integ/config.yml
@@ -1,7 +1,9 @@
 rules:
   - name: "VGRF-Reporting CSV comparing"
-    pattern_include: "**/*.csv"
-    pattern_exclude: "**/*_diff.csv"
+    pattern_include:
+      - "**/*.csv"
+    pattern_exclude:
+      - "**/*_diff.csv"
     CSV:
       comparison_modes:
       - Absolute: 1.0
@@ -11,8 +13,10 @@ rules:
       exclude_field_regex: "Excluded"
 
   - name: "HTML-Compare strict"
-    pattern_exclude: "**/*_changed.html"
-    pattern_include: "**/*.html"
+    pattern_exclude:
+      - "**/*_changed.html"
+    pattern_include:
+      - "**/*.html"
     PlainText:
       threshold: 1.0
       ignore_lines:
@@ -21,7 +25,8 @@ rules:
         - "[A-Z]*[0-9]"
 
   - name: "HTML-Compare fuzzy"
-    pattern_include: "**/*.html"
+    pattern_include:
+      - "**/*.html"
     PlainText:
       threshold: 0.9
 
