--- a/tests/integ/vgrf.yml
+++ b/tests/integ/vgrf.yml
@@ -1,7 +1,9 @@
 rules:
   - name: "VGRF-Reporting CSV comparing"
-    pattern_include: "**/*.csv"
-    pattern_exclude: "**/vg_report.csv"
+    pattern_include:
+      - "**/*.csv"
+    pattern_exclude:
+      - "**/vg_report.csv"
     CSV:
       comparison_modes:
         - Absolute: 1.0
@@ -9,8 +11,10 @@ rules:
       exclude_field_regex: "Excluded"
 
   - name: "HTML-Compare strict"
-    pattern_exclude: "**/*_changed.html"
-    pattern_include: "**/*.html"
+    pattern_exclude:
+      - "**/*_changed.html"
+    pattern_include:
+      - "**/*.html"
     PlainText:
       threshold: 1.0
       ignore_lines:
