--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ data-encoding = "2.3.2"
 permutation = "0.4.1"
 pdf-extract = "0.6.4"
 vg_errortools = "0.1.0"
+rayon = "1.6"
 
 [target.'cfg(windows)'.dependencies]
 ansi_term = "0.12"
