Fix some typos, add changelog to readme, add preprocessing to vgrf.yml.

--- a/tests/integ/vgrf.yml
+++ b/tests/integ/vgrf.yml
@@ -9,6 +9,8 @@ rules:
         - Absolute: 1.0
         - Relative: 0.1
       exclude_field_regex: "Excluded"
+      preprocessing:
+        - ExtractHeaders
 
   - name: "HTML-Compare strict"
     pattern_exclude:
