--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
 name = "havocompare"
-description = "A flexible folder comparison tool / crate with html reporting."
+description = "A flexible rule-based file and folder comparison tool and crate including nice html reporting. Compares CSVs, text files, pdf-texts and images."
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.1.5-RC2"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
 exclude = ["tests/integ", "tests/html", "target", "tests/csv", ".github", "test_report"]
+keywords = ["diff" ,"compare", "csv", "image", "difference", "csv-diff", "image-diff", "pdf", "pdf-diff", "plain-text", "plain-text-diff"]
+categories = ["filesystem"]
 
 [dependencies]
 clap = {version= "4.0", features=["derive"]}
