--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
 exclude = ["tests/integ", "tests/html", "target", "tests/csv", ".github", "test_report"]
-keywords = ["diff" ,"compare", "csv", "image", "difference", "csv-diff", "image-diff", "pdf", "pdf-diff", "plain-text", "plain-text-diff"]
+keywords = ["diff" ,"compare", "csv", "image", "difference"]
 categories = ["filesystem"]
 
 [dependencies]
