--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A flexible rule-based file and folder comparison tool and crate i
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
@@ -31,18 +31,16 @@ strsim = "0.10"
 itertools = "0.10"
 tera = "1.17"
 md5 = "0.7.0"
-tempdir = "0.3"
-sha2 = "0.10.6"
-data-encoding = "2.3.2"
-permutation = "0.4.1"
-pdf-extract = "0.6.4"
-vg_errortools = "0.1.0"
+sha2 = "0.10"
+data-encoding = "2.3"
+permutation = "0.4"
+pdf-extract = "0.6"
+vg_errortools = "0.1"
 rayon = "1.6"
-
-[target.'cfg(windows)'.dependencies]
-ansi_term = "0.12"
+enable-ansi-support = "0.2"
 
 [dev-dependencies]
+tempfile = "3.3"
 env_logger = "0.10"
 tracing = {version = "0.1", default-features = false}
 tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
