--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ version = "0.2.4"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
-exclude = ["tests/integ", "tests/html", "target", "tests/csv", ".github", "test_report"]
+exclude = ["tests/pdf", "tests/integ", "tests/html", "target", "tests/csv", ".github", "test_report"]
 keywords = ["diff" ,"compare", "csv", "image", "difference"]
 categories = ["filesystem"]
 
