Add new image-compare version to allow RGBA image comparison Update README.md accordingly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A flexible rule-based file and folder comparison tool and crate i
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.2.4"
+version = "0.3.0-beta1"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
@@ -21,7 +21,7 @@ schemars_derive = "0.8"
 thiserror = "1.0"
 regex = "1.6"
 image = "0.24.4"
-image-compare = "0.2.4"
+image-compare = "0.3.0-beta1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 serde_json = "1.0"
