--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ exclude = ["tests/pdf", "tests/integ", "tests/html", "target", "tests/csv", ".gi
 keywords = ["diff" ,"compare", "csv", "image", "difference"]
 categories = ["filesystem"]
 
+[[bin]]
+name = "print_args"
+path = "src/print_args.rs"
+
+
 [dependencies]
 clap = {version= "4.1", features=["derive"]}
 serde = "1.0"
