--- a/tests/integ/vgrf.yml
+++ b/tests/integ/vgrf.yml
@@ -33,3 +33,15 @@ rules:
       modification_date_tolerance_secs: 0
       file_size_tolerance_bytes: 0
 
+  - name: "External checker"
+    pattern_include:
+      - "*.*"
+    External:
+      executable: "cargo"
+      extra_params:
+        - "run"
+        - "--bin"
+        - "print_args"
+        - "--"
+        - "--only-images"
+
