--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A flexible rule-based file and folder comparison tool and crate i
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.3.0-beta1"
+version = "0.3.0"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
@@ -27,7 +27,7 @@ schemars_derive = "0.8"
 thiserror = "1.0"
 regex = "1.6"
 image = "0.24"
-image-compare = "0.3.0-beta1"
+image-compare = "0.3.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 serde_json = "1.0"
