--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A flexible rule-based file and folder comparison tool and crate i
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.3.1"
+version = "0.3.2"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
@@ -34,7 +34,7 @@ serde_json = "1.0"
 glob = "0.3"
 test-log = {version="0.2", features=["trace"]}
 strsim = "0.10"
-itertools = "0.10"
+itertools = "0.11"
 tera = "1.17"
 sha2 = "0.10"
 data-encoding = "2.3"
@@ -45,6 +45,8 @@ rayon = "1.6"
 enable-ansi-support = "0.2"
 tempfile = "3.3"
 fs_extra = "1.3"
+opener = "0.6"
+anyhow = "1.0"
 
 [dev-dependencies]
 env_logger = "0.10"
