--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "havocompare"
-description = "A flexible rule-based file and folder comparison tool and crate including nice html reporting. Compares CSVs, text files, pdf-texts and images."
+description = "A flexible rule-based file and folder comparison tool and crate including nice html reporting. Compares CSVs, JSON, text files, pdf-texts and images."
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
@@ -18,7 +18,7 @@ path = "src/print_args.rs"
 
 
 [dependencies]
-clap = {version= "4.3", features=["derive"]}
+clap = {version= "4.4", features=["derive"]}
 chrono = "0.4"
 serde = "1.0"
 serde_yaml = "0.9"
@@ -27,7 +27,7 @@ schemars_derive = "0.8"
 thiserror = "1.0"
 regex = "1.8"
 image = "0.24"
-image-compare = "0.3.0"
+image-compare = "0.3.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 serde_json = "1.0"
@@ -39,14 +39,15 @@ tera = "1.19"
 sha2 = "0.10"
 data-encoding = "2.4"
 permutation = "0.4"
-pdf-extract = "0.6"
+pdf-extract = "0.7"
 vg_errortools = "0.1"
-rayon = "1.7.0"
+rayon = "1.8.0"
 enable-ansi-support = "0.2"
-tempfile = "3.6"
+tempfile = "3.8"
 fs_extra = "1.3"
 opener = "0.6"
 anyhow = "1.0"
+json_diff = {git = "https://github.com/ChrisRega/json-diff"}
 
 [dev-dependencies]
 env_logger = "0.10"
