--- a/config_scheme.json
+++ b/config_scheme.json
@@ -148,6 +148,21 @@
         }
       }
     },
+    "JsonConfig": {
+      "description": "configuration for the json compare module",
+      "type": "object",
+      "required": [
+        "ignore_keys"
+      ],
+      "properties": {
+        "ignore_keys": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
     "Mode": {
       "description": "comparison mode for csv cells",
       "oneOf": [
@@ -453,6 +468,19 @@
           "properties": {
             "FileProperties": {
               "$ref": "#/definitions/PropertiesConfig"
+            }
+          },
+          "additionalProperties": false
+        },
+        {
+          "description": "Compare JSON files",
+          "type": "object",
+          "required": [
+            "Json"
+          ],
+          "properties": {
+            "Json": {
+              "$ref": "#/definitions/JsonConfig"
             }
           },
           "additionalProperties": false
