--- a/tests/integ/json.yml
+++ b/tests/integ/json.yml
@@ -2,6 +2,4 @@ rules:
   - name: "Compare JSON files"
     pattern_include:
       - "**/*.json"
-    Json:
-      ignore_keys:
-        - ""
+    Json: {}
