--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,9 +47,7 @@ tempfile = "3.8"
 fs_extra = "1.3"
 opener = "0.6"
 anyhow = "1.0"
-json_diff = {git = "https://github.com/ChrisRega/json-diff"}
-
-
+json_diff = {git = "https://github.com/ChrisRega/json-diff", tag = "0.2.0-rc1"}
 
 
 [dev-dependencies]
