--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A flexible rule-based file and folder comparison tool and crate i
 repository = "https://github.com/VolumeGraphics/havocompare"
 homepage = "https://github.com/VolumeGraphics/havocompare"
 documentation = "https://docs.rs/havocompare"
-version = "0.5.0-RC2"
+version = "0.5.0"
 edition = "2021"
 license = "MIT"
 authors = ["Volume Graphics GmbH"]
@@ -47,7 +47,7 @@ tempfile = "3.8"
 fs_extra = "1.3"
 opener = "0.6"
 anyhow = "1.0"
-json_diff_ng = {version = "0.3.0-rc1"}
+json_diff_ng = {version = "0.3.0"}
 
 
 [dev-dependencies]
