--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -1,25 +1,34 @@
-name: "Lint"
-description: "Lints for rust"
+name: Lint
+description: Lints for rust
 inputs:
   dprint_version:
-    description: dprint version
+    description: The dprint version to use
     required: true
-    default: "0.45"
+    default: "~0.45.0"
   deny_version:
-    description: cargo deny version
+    description: The cargo deny version to use
     required: true
-    default: "0.14"
+    default: "~0.14.15"
 runs:
   using: "composite"
   steps:
     # dprint
-    - run: cargo install --locked dprint@${{ inputs.dprint_version }}
+    - run: |
+        echo '::group::Install dprint'
+        cargo install --locked 'dprint@${{ inputs.dprint_version }}'
+        echo '::endgroup::'
+      shell: bash
     - run: dprint check
+      shell: bash
     # deny
-    - run: cargo install --locked cargo-deny@${{ inputs.deny_version }}
+    - run: cargo install --locked 'cargo-deny@${{ inputs.deny_version }}'
+      shell: bash
     - run: cargo deny --all-features check bans licenses sources
+      shell: bash
     - run: advisories
+      shell: bash
       continue-on-error: true
     # clippy
-    - name: clippy
+    - name: Clippy
       run: cargo clippy --all-targets --all-features
+      shell: bash
