--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ env:
 # TODO test coverage
 # TODO release (arm macos-14)
 # TODO lock file?
+# TODO build release
 
 jobs:
   ci:
@@ -25,17 +26,19 @@ jobs:
           - os: windows-2022
     runs-on: ${{ matrix.os }}
     steps:
-      - run: rustup toolchain install --profile minimal ${{ env.RUST_TOOLCHAIN_VERSION }}
-      - run: rustup default ${{ env.RUST_TOOLCHAIN_VERSION }}
+      - name: Install toolchain
+        run: rustup toolchain install --profile minimal ${{ env.RUST_TOOLCHAIN_VERSION }}
+      - name: Setup toolchain
+        run: rustup default ${{ env.RUST_TOOLCHAIN_VERSION }}
       - uses: actions/checkout@v4
 
-      - name: fetch
+      - name: Fetch
         run: cargo fetch
 
       - if: runner.os == 'Linux'
         uses: ./.github/actions/lint
 
-      - name: build
+      - name: Build
         run: cargo build --all-targets --all-features
-      - name: test
+      - name: Test
         run: cargo test --all-features
