--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -4,30 +4,51 @@ inputs:
   dprint_version:
     description: The dprint version to use
     required: true
-    default: "~0.45.0"
+    default: ~0.45.0
   deny_version:
     description: The cargo deny version to use
     required: true
-    default: "~0.14.15"
+    default: ~0.14.15
 runs:
-  using: "composite"
+  using: composite
   steps:
+    - name: Cache binaries
+      uses: actions/cache@v4
+      id: cache-binaries
+      with:
+        path: ${{ runner.temp }}/bin
+        key: ${{ runner.os }}-${{ inputs.dprint_version }}-${{ inputs.deny_version }}
+
+    - name: Setup path
+      run: echo '${{ runner.temp }}/bin' >> $GITHUB_PATH
+      shell: bash
+
     # dprint
-    - run: |
+    - if: steps.cache-binaries.outputs.cache-hit != 'true'
+      run: |
         echo '::group::Install dprint'
-        cargo install --locked 'dprint@${{ inputs.dprint_version }}'
+        cargo install --locked --root '${{ runner.temp }}' 'dprint@${{ inputs.dprint_version }}'
         echo '::endgroup::'
       shell: bash
     - run: dprint check
       shell: bash
+
     # deny
-    - run: cargo install --locked 'cargo-deny@${{ inputs.deny_version }}'
+    - if: steps.cache-binaries.outputs.cache-hit != 'true'
+      name: Install deny
+      run: |
+        echo '::group::Install cargo-deny'
+        cargo install --locked --root '${{ runner.temp }}' 'cargo-deny@${{ inputs.deny_version }}'
+        echo '::endgroup::'
       shell: bash
-    - run: cargo deny --all-features check bans licenses sources
+    - name: Deny
+      run: cargo deny --all-features check bans licenses sources
       shell: bash
-    - run: advisories
+    - name: Advisories
+      run: cargo deny --all-features check advisories
       shell: bash
       continue-on-error: true
+
     # clippy
     - name: Clippy
       run: cargo clippy --all-targets --all-features
